--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,10 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 
     
-    <link rel="stylesheet" href="https://theias.netlify.app/style.main.min.72b9b6e68e6887395f7735d3b72e775ac7bb403d111433aa4ff1bd9fa5520916.css" integrity="sha256-crm25o5ohzlfdzXTty53Wse7QD0RFDOqT/G9n6VSCRY=" >
+    <link rel="stylesheet" href="https://theias.netlify.app/style.main.min.adbaa852bfdb3847cbeb8fcdbe7bda93c64dc3560912a5fe0541a46d31926731.css" integrity="sha256-rbqoUr/bOEfL64/Nvnvak8ZNw1YJEqX&#43;BUGkbTGSZzE=" >
 </head>
   <body>
     <ul class="navbar">
@@ -23,28 +22,22 @@
 </ul>
     <div class="container" id="header">
     <div class="header">
-        <h1 class="header__title">Afonso Theias</h1>
+        <div class="header__title">
+            <h1>Afonso Theias</h1>
+        </div>
         <img class="header__img" src="img/header.png" alt="header_picture">
     </div>
 </div>
     <div class="container" id="about">
-    <img class="about__img" src="img/about.jpg" alt="about_picture">
-    <div class="about__text">
-        <h1 class="about__title">Sobre</h1>
-        <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, 
-pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. 
-Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, 
-in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent
-per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut 
-vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor.
-Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat 
-faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc. 
-Phasellus bibendum turpis ut ipsum egestas, sed sollicitudin elit convallis. 
-Cras pharetra mi tristique sapien vestibulum lobortis. Nam eget bibendum metus, 
-non dictum mauris. Nulla at tellus sagittis, viverra est a, bibendum metus.
-        </p>
-    </div>
+    <div class="about">
+        <div class="about__text">
+            <h1 class="about__title">Sobre</h1>
+            <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc. Phasellus bibendum turpis ut ipsum egestas, sed sollicitudin elit convallis. Cras pharetra mi tristique sapien vestibulum lobortis. Nam eget bibendum metus, non dictum mauris. Nulla at tellus sagittis, viverra est a, bibendum metus.
+            </p>
+        </div>
+        <img class="about__img" src="img/about.jpg" alt="about_picture">
+        </div>
 </div>
     <div class="container" id="portfolio">
     <div class="portfolio">
@@ -74,12 +67,28 @@ non dictum mauris. Nulla at tellus sagittis, viverra est a, bibendum metus.
             <div class="portfolio__card">
                 <img class="portfolio__card__img" src="img/art8.jpg" alt="art8">
             </div>
+            <div class="portfolio__card">
+                <img class="portfolio__card__img" src="img/art9.jpg" alt="art9">
+            </div>
         </div>
     </div>
 </div>
     <div class="container" id="contacts">
     <div class="contacts">
         <h1 class="contacts__title">Contactos</h1>
+        <div class="social">
+            <div class="social__icon">
+                <a href="#" target="_blank" rel="noreferrer">
+                    <i class="fas fa-envelope-square" title="Email" aria-label="Go to Email"></i>
+                </a>
+                <a href="#" target="_blank" rel="noreferrer">
+                    <i class="fab fa-instagram" title="Instagram" aria-label="Go to Instagram"></i>
+                </a>
+                <a href="#" target="_blank" rel="noreferrer">
+                    <i class="fab fa-linkedin" title="LinkedIn" aria-label="Go to LinkedIn"></i>
+                </a>
+            </div>
+        </div>
         <img class="contacts__img" src="img/contacts.png" alt="contacts_picture">
     </div>
 </div>
