--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 
     
-    <link rel="stylesheet" href="https://theias.netlify.app/style.main.min.adbaa852bfdb3847cbeb8fcdbe7bda93c64dc3560912a5fe0541a46d31926731.css" integrity="sha256-rbqoUr/bOEfL64/Nvnvak8ZNw1YJEqX&#43;BUGkbTGSZzE=" >
+    <link rel="stylesheet" href="https://theias.netlify.app/style.main.min.b278a1a2f4d73ea4666e4476a19ca6cbe3e7eb2e349ee1d07c2cea7d4f5c3d06.css" integrity="sha256-snihovTXPqRmbkR2oZymy&#43;Pn6y40nuHQfCzqfU9cPQY=" >
 </head>
   <body>
     <ul class="navbar">
@@ -42,7 +42,7 @@
     <div class="container" id="portfolio">
     <div class="portfolio">
         <h1 class="portfolio__title">Portfolio</h1>
-        <div class="portfolio__cards">
+        <div class="portfolio__cards" id="portfolio-container">
             <div class="portfolio__card">
                 <img class="portfolio__card__img" src="img/art1.jpg" alt="art1">
             </div>
@@ -95,7 +95,7 @@
   </body>
 
 
-  <script>
+  <script defer>
     window.addEventListener("scroll", function() {
       var target = document.getElementById("header");
       var element = document.getElementById("back-to-the-top"); 
@@ -106,4 +106,7 @@
       }
     });
   </script>
+  
+  
+  <script defer type="application/javascript" src="https://theias.netlify.app/js/portfolio.min.js"></script>
 </html>
